@startuml
!theme plain
skinparam backgroundColor transparent
skinparam shadowing false
skinparam roundcorner 8
skinparam defaultFontName "Helvetica"
skinparam classAttributeIconSize 0
skinparam ArrowColor #33475b
skinparam class {
  BackgroundColor #FBFCFE
  BorderColor #33475b
  ArrowColor #33475b
}

' ── Anchors from previous sprints (compacted) ──
class User <<Sprint 1>> {
  +id : UUID
  +email : String <<unique>>
}

class Reminder <<Sprint 4>> {
  +id : UUID
  +status : ReminderStatus
}

' ── Sprint 5 — Notifications ──
package "Notifications (Sprint 5)" {
  class Notification #LightYellow {
    +id : UUID
    +image : String
    -sendBy : UUID «nullable»
  }
  class NotificationContent #LightYellow {
    +title : String
    +body : String
    +language : Language
  }
  class UserNotification #LightYellow {
    +isSeen : Boolean
  }
  class NotificationToken #LightYellow {
    +token : String <<unique>>
    +deviceType : DeviceType
  }
  class UserNotificationSettings #LightYellow {
    +emailNotificationsEnabled : Boolean = true
    +pushNotificationsEnabled : Boolean = true
    +telegramNotificationsEnabled : Boolean = false
    +ntfyNotificationsEnabled : Boolean = false
  }
  class UserTelegramBot #LightYellow {
    +chatId : String
  }
  class UserNtfyIntegration #LightYellow {
    +topic : String
  }
}

' ── Sprint 5 — Infrastructure Monitoring ──
package "Infrastructure Monitoring (Sprint 5)" {
  class Server #LightYellow {
    +id : UUID
    +ip : String
    +status : ServerServiceStatus
    +expiredAt : DateTime
  }
  class Service #LightYellow {
    +domain : String
    +status : ServerServiceStatus
    +expiredAt : DateTime
  }
  class ServerNotification #LightYellow {
    +message : String
    +isSent : Boolean «outbox»
  }
  class ServiceNotification #LightYellow {
    +message : String
    +isSent : Boolean «outbox»
  }
  class UserServerManagement #LightYellow {
    +id : UUID
  }
}

' ── Relations from the anchors into Sprint 5 ──
User "1" --> "0..*" Notification : "sends (sendBy?)"
User "1" --> "0..*" UserNotification : receives
User "1" --> "0..*" NotificationToken : devices
User "1" --> "1" UserNotificationSettings : has
User "1" --> "1" UserTelegramBot : has
User "1" --> "1" UserNtfyIntegration : has
User "1" --> "0..*" UserServerManagement : manages

' ── Sprint 5 internal relations ──
Notification "1" --> "1..*" NotificationContent : content
Notification "1" --> "0..*" UserNotification : "fan-out"

Server "1" --> "0..*" Service : "hosts (cascade)"
Server "1" --> "0..*" ServerNotification : raises
Service "1" --> "0..*" ServiceNotification : raises
Server "1" --> "0..*" UserServerManagement : "managed via"

' ── Cross-sprint seam: channel config feeds every fan-out ──
Reminder ..> UserNotificationSettings : "reads (fan-out)"
ServerNotification ..> UserNotificationSettings : "reads (fan-out)"
@enduml
